--- a/cliente.html
+++ b/cliente.html
@@ -32,7 +32,9 @@
         </div>
       </nav>
 
-      <main></main>
+      <main>
+        <div id="contactInfo"></div>
+      </main>
 
     <footer>
         <hr style="border: 2px bold color(srgb rgb(248, 248, 248) rgb(255, 255, 255) rgb(255, 255, 255));">
@@ -47,8 +49,11 @@
         logoutFunc();
     </script>
 
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+
+    <script src="/js/client.js"></script> 
     
 </body>
 </html>
