eliminar y mostrar datos, cliente

--- a/abonar.html
+++ b/abonar.html
@@ -33,12 +33,9 @@
       </nav>
 
       <main>
-
-        <main>
-          <div class="card-general">
-              <h1>Editar Cliente</h1>
-          </div>
-        </main>
+        <div class="card-general">
+            <h1>Realizar Abono</h1>
+        </div>
       </main>
 
     <footer>
