--- a/weekly.html
+++ b/weekly.html
@@ -33,20 +33,22 @@
       </nav>
 
       <main>
-        <h2>Clientes Semanales</h2>
-        <table class="table tabla-primary">
-          <thead class="color-table">
-            <tr>
-              <th scope="col">Nombre</th>
-              <th scope="col">Telefono</th>
-              <th scope="col">Estado</th>
-              <th scope="col"></th>
-            </tr>
-          </thead>
-          <tbody id="clientsWeekly">
-            <!-- Aquí se llenará la tabla dinámicamente -->
-          </tbody>
-        </table>
+        <div class="client-div">
+          <h2>Clientes Semanales</h2>
+          <table class="table tabla-primary">
+            <thead class="color-table">
+              <tr>
+                <th scope="col">Nombre</th>
+                <th scope="col">Telefono</th>
+                <th scope="col">Estado</th>
+                <th scope="col"></th>
+              </tr>
+            </thead>
+            <tbody id="clientsWeekly">
+              <!-- Aquí se llenará la tabla dinámicamente -->
+            </tbody>
+          </table>
+        </div>
       </main>
 
       <!-- Footer -->
