--- a/abonar.html
+++ b/abonar.html
@@ -34,7 +34,7 @@
 
       <main>
         <div class="card-general">
-            <h1>Realizar Abono</h1>
+            <h4 class="text-info">Realizar Abono</h4>
         </div>
       </main>
 
