--- a/biweekly.html
+++ b/biweekly.html
@@ -34,7 +34,7 @@
 
       <main>
         <div class="client-div">
-          <h2>Clientes Quincenales</h2>
+          <h4 class="text-info">Clientes Quincenales</h4>
           <table class="table tabla-primary">
             <thead class="color-table">
               <tr>
