--- a/cliente.html
+++ b/cliente.html
@@ -34,7 +34,7 @@
 
       <main>
         <div class="card-client">
-          <h1>Información Cliente</h1>
+          <h4 class="text-info">Información Cliente</h4>
           <div id="contactInfo"></div>
           <div>
             <table class="table tabla-primary">
