--- a/weekly.html
+++ b/weekly.html
@@ -34,7 +34,7 @@
 
       <main>
         <div class="client-div">
-          <h2>Clientes Semanales</h2>
+          <h4 class="text-info">Clientes Semanales</h4>
           <table class="table tabla-primary">
             <thead class="color-table">
               <tr>
