--- a/update_client.html
+++ b/update_client.html
@@ -36,7 +36,7 @@
 
         <main>
           <div class="card-general">
-              <h1>Editar Cliente</h1>
+              <h4 class="text-info">Editar Cliente</h4>
           </div>
         </main>
       </main>
