--- a/create_client.html
+++ b/create_client.html
@@ -88,6 +88,7 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="/js/logout.js"></script> 
     <script src="/js/create_client.js"></script> 
+    <script src="/js/auth.js"></script>
     <script>
         // Llama a las funciones después de haber cargado los archivos JavaScript
         logoutFunc();
