--- a/dashboard.html
+++ b/dashboard.html
@@ -35,6 +35,13 @@
       <main>
         <div id="new-client">
           <a id="create_client" class="btn btn-primary my-2 my-sm-0" href="/create_client.html">Agregar Cliente</a>
+          <div style="margin-top: 1%;">
+            <a class="btn btn-primary my-2 my-sm-0" href="/weekly.html">Ver Clientes Semanales</a>
+          </div>
+          <div style="margin-top: 1%;">
+            <a class="btn btn-primary my-2 my-sm-0" href="/biweekly.html">Ver Clientes Quincenales</a>
+          </div>
+          
         </div>
         
       </main>
@@ -48,6 +55,7 @@
     </footer>
 
     <script src="/js/logout.js"></script> 
+    <script src="/js/auth.js"></script>
     <script>
         // Llama a las funciones después de haber cargado los archivos JavaScript
         logoutFunc();
