--- a/abonar.html
+++ b/abonar.html
@@ -34,7 +34,18 @@
 
       <main>
         <div class="card-general">
-            <h4 class="text-info">Realizar Abono</h4>
+            
+            <form id="abonar">
+              <h4 class="text-info">Realizar Abono</h4>
+              <div>
+                  <label for="payment" class="form-label mt-4">Monto</label>
+                  <input type="text" class="form-control" name="payment" aria-describedby="payment" placeholder="Monto del abono">
+              </div>
+              <div style="margin-top: 2%;">
+                  <div style="margin-top: 1%;">
+                  <button type="submit" class="btn btn-success">Abonar</button>
+                  <a id="btn-volver-abo" class="btn btn-secondary my-2 my-sm-0" href="#">Volver</a>
+              </div>
         </div>
       </main>
 
@@ -45,6 +56,8 @@
         </div>
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="/js/auth.js"></script>
     <script src="/js/logout.js"></script> 
     <script>
         // Llama a las funciones después de haber cargado los archivos JavaScript
@@ -53,6 +66,7 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/js/abonar.js"></script> 
     
 </body>
 </html>
