--- a/biweekly.html
+++ b/biweekly.html
@@ -35,11 +35,11 @@
       <main>
         <div class="client-div">
           <h4 class="text-info">Clientes Quincenales</h4>
-          <table class="table tabla-primary">
+          <table class="table table-custom">
             <thead class="color-table">
               <tr>
                 <th scope="col">Nombre</th>
-                <th scope="col">Telefono</th>
+                <th scope="col">Saldo</th>
                 <th scope="col">Estado</th>
                 <th scope="col"></th>
               </tr>
@@ -61,7 +61,9 @@
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="/js/logout.js"></script> 
+    <script src="/js/auth.js"></script>
     <script src="/js/biweekly.js"></script>
+    
     <script>
         // Llama a las funciones después de haber cargado los archivos JavaScript
         logoutFunc();
