--- a/cliente.html
+++ b/cliente.html
@@ -52,9 +52,10 @@
           </div>
         </div>
         <div class="client-buttons">
-            <a id="btn-abo" class="btn btn-success my-2 my-sm-0" href="/abonar.html">Abonar</a>
-            <a id="btn-edi" class="btn btn-primary my-2 my-sm-0" href="/update_client.html">Editar</a>
+            <a id="btn-abo" class="btn btn-success my-2 my-sm-0" href="#">Abonar</a>
+            <a id="btn-edi" class="btn btn-primary my-2 my-sm-0" href="#">Editar</a>
             <a id="btn-del" class="btn btn-danger my-2 my-sm-0" href="#">Eliminar</a>
+            <a id="btn-bac" class="btn btn-secondary my-2 my-sm-0" href="/dashboard.html">Volver</a>
         </div>
       </main>
 
@@ -66,6 +67,7 @@
     </footer>
 
     <script src="/js/logout.js"></script> 
+    <script src="/js/auth.js"></script>
     <script>
         // Llama a las funciones después de haber cargado los archivos JavaScript
         logoutFunc();
